CarouselForms are good

--- a/publicstatic/LoginPage.html
+++ b/publicstatic/LoginPage.html
@@ -15,7 +15,7 @@
   <section class="container">
     <div class="login">
       <h1>Login to Pirate Golf</h1><BR>
-      <form method="post" action="login">
+      <form method="get" action="login">
         <p>Username: <input type="text" name="username" value="" placeholder="Username or email"></p>
         <p>Password: <input type="password" name="password" value="" placeholder="Password"></p>
         <p class="remember_me">
