Andre and Wes's files added

--- a/publicstatic/AddCourseForm.html
+++ b/publicstatic/AddCourseForm.html
@@ -7,131 +7,248 @@
 
 <body bgcolor=D7CAE6>
 <div align="center">
-  <p>Add Course </p>
+  <p>Add Course</p>
   <p>&nbsp;</p>
   <form id="form1" name="form1" method="post" action="">
-    <label>Course Name
-      <input type="text" name="textfield" />
+    <label>Course name
+      <input name="textfield" type="text" maxlength="255" />
     </label>
     <label><br />
-    <br />
-      Green Type
-      <input type="text" name="textfield2" />
     </label>
+    <p>
+      <label>Number of holes
+      <input type="text" name="textfield3" />
+      </label>
+    </p>
+    <p>
+      <label></label>
+      <label>Description
+      <textarea maxlength="255" name="textarea"></textarea>
+      </label>
+    </p>
+    <p>
+      <label>Location
+      <input name="textfield2" type="text" maxlength="255" />
+      </label>
+    </p>
     <p>&nbsp;</p>
-    <p>Par</p>
-    <p>Hole 1
+    <p>Hole info </p>
+    <p>Hole 1 
+      <label>Par
       <select name="select">
         <option>3</option>
         <option>4</option>
         <option>5</option>
       </select>
-      Hole 2
-       <select name="select2">
-         <option>3</option>
-         <option>4</option>
-         <option>5</option>
-       </select>
-Hole 3
+      </label>
+      <label>Green type
+      <input name="textfield4" type="text" maxlength="20" />
+      </label>
+    </p>
+    <p>Hole 2
+      <label>Par
+      <select name="select2">
+        <option>3</option>
+        <option>4</option>
+        <option>5</option>
+      </select>
+      </label>
+      <label>Green type
+      <input name="textfield42" type="text" maxlength="20" />
+      </label>
+</p>
+    <p>Hole 3
+      <label>Par
       <select name="select3">
         <option>3</option>
         <option>4</option>
         <option>5</option>
       </select>
-Hole 4
+      </label>
+      <label>Green type
+      <input name="textfield43" type="text" maxlength="20" />
+      </label>
+</p>
+    <p>Hole 4
+      <label>Par
       <select name="select4">
         <option>3</option>
         <option>4</option>
         <option>5</option>
       </select>
-Hole 5
+      </label>
+      <label>Green type
+      <input name="textfield44" type="text" maxlength="20" />
+      </label>
+</p>
+    <p>Hole 5
+      <label>Par
       <select name="select5">
         <option>3</option>
         <option>4</option>
         <option>5</option>
       </select>
-Hole 6
+      </label>
+      <label>Green type
+      <input name="textfield45" type="text" maxlength="20" />
+      </label>
+</p>
+    <p>Hole 6
+      <label>Par
       <select name="select6">
         <option>3</option>
         <option>4</option>
         <option>5</option>
       </select>
+      </label>
+      <label>Green type
+      <input name="textfield46" type="text" maxlength="20" />
+      </label>
 </p>
     <p>Hole 7
+      <label>Par
       <select name="select7">
         <option>3</option>
         <option>4</option>
         <option>5</option>
       </select>
-Hole 8
+      </label>
+      <label>Green type
+      <input name="textfield47" type="text" maxlength="20" />
+      </label>
+</p>
+    <p>Hole 8
+      <label>Par
+        <select name="select7">
+          <option>3</option>
+          <option>4</option>
+          <option>5</option>
+        </select>
+        </label>
+        <label>Green type
+          <input name="textfield422" type="text" maxlength="20" />
+        </label>
+    </p>
+    <p>Hole 9
+      <label>Par
+        <select name="select7">
+          <option>3</option>
+          <option>4</option>
+          <option>5</option>
+        </select>
+        </label>
+        <label>Green type
+          <input name="textfield432" type="text" maxlength="20" />
+        </label>
+    </p>
+    <p>Hole 10
+      <label>Par
+        <select name="select7">
+          <option>3</option>
+          <option>4</option>
+          <option>5</option>
+        </select>
+        </label>
+        <label>Green type
+          <input name="textfield442" type="text" maxlength="20" />
+        </label>
+    </p>
+    <p>Hole 11
+      <label>Par
+        <select name="select7">
+          <option>3</option>
+          <option>4</option>
+          <option>5</option>
+        </select>
+        </label>
+        <label>Green type
+          <input name="textfield452" type="text" maxlength="20" />
+        </label>
+    </p>
+    <p>Hole 12
+      <label>Par
+        <select name="select7">
+          <option>3</option>
+          <option>4</option>
+          <option>5</option>
+        </select>
+        </label>
+        <label>Green type
+          <input name="textfield462" type="text" maxlength="20" />
+        </label>
+</p>
+    <p>Hole 13
+      <label>Par
       <select name="select8">
         <option>3</option>
         <option>4</option>
         <option>5</option>
       </select>
-Hole 9
-      <select name="select9">
-        <option>3</option>
-        <option>4</option>
-        <option>5</option>
-      </select>
-Hole 10
-      <select name="select10">
-        <option>3</option>
-        <option>4</option>
-        <option>5</option>
-      </select>
-Hole 11
-      <select name="select11">
-        <option>3</option>
-        <option>4</option>
-        <option>5</option>
-      </select>
-Hole 12
-      <select name="select12">
-        <option>3</option>
-        <option>4</option>
-        <option>5</option>
-      </select>
+      </label>
+      <label>Green type
+      <input name="textfield48" type="text" maxlength="20" />
+      </label>
 </p>
-    <p>Hole 13
-      <select name="select13">
-        <option>3</option>
-        <option>4</option>
-        <option>5</option>
-      </select>
-Hole 14
-      <select name="select14">
-        <option>3</option>
-        <option>4</option>
-        <option>5</option>
-      </select>
-Hole 15
-      <select name="select15">
-        <option>3</option>
-        <option>4</option>
-        <option>5</option>
-      </select>
-Hole 16
-      <select name="select16">
-        <option>3</option>
-        <option>4</option>
-        <option>5</option>
-      </select>
-Hole 17
-      <select name="select17">
-        <option>3</option>
-        <option>4</option>
-        <option>5</option>
-      </select>
-Hole 18
-      <select name="select18">
-        <option>3</option>
-        <option>4</option>
-        <option>5</option>
-      </select>
-</p>
-    <p>&nbsp;</p>
+    <p>Hole 14
+      <label>Par
+        <select name="select8">
+          <option>3</option>
+          <option>4</option>
+          <option>5</option>
+        </select>
+        </label>
+        <label>Green type
+          <input name="textfield423" type="text" maxlength="20" />
+        </label>
+    </p>
+    <p>Hole 15
+      <label>Par
+        <select name="select8">
+          <option>3</option>
+          <option>4</option>
+          <option>5</option>
+        </select>
+        </label>
+        <label>Green type
+          <input name="textfield433" type="text" maxlength="20" />
+        </label>
+    </p>
+    <p>Hole 16
+      <label>Par
+        <select name="select8">
+          <option>3</option>
+          <option>4</option>
+          <option>5</option>
+        </select>
+        </label>
+        <label>Green type
+          <input name="textfield443" type="text" maxlength="20" />
+        </label>
+    </p>
+    <p>Hole 17
+      <label>Par
+        <select name="select8">
+          <option>3</option>
+          <option>4</option>
+          <option>5</option>
+        </select>
+        </label>
+        <label>Green type
+          <input name="textfield453" type="text" maxlength="20" />
+        </label>
+    </p>
+    <p>Hole 18
+      <label>Par
+        <select name="select8">
+          <option>3</option>
+          <option>4</option>
+          <option>5</option>
+        </select>
+        </label>
+        <label>Green type
+          <input name="textfield463" type="text" maxlength="20" />
+        </label>
+    </p>
     <p>&nbsp;</p>
     <p>
       <input name="Submit" type="submit" onclick="window.alert(&quot;Course has been added&quot;);" value="Submit" />
