--- a/publicstatic/UpdatePlayerForm.html
+++ b/publicstatic/UpdatePlayerForm.html
@@ -9,10 +9,14 @@
   <p>Update Player</p>
   <p>&nbsp;</p>
   <form id="form1" name="form1" method="post" action="">
-    <label>Player Name
+    <label>Player name
     <input type="text" name="textfield" />
     </label> 
     <label><br />
+    <br />
+    Password
+    <input type="text" name="textfield3" />
+    <br />
     <br />
     ID
     <input type="text" name="textfield2" />
