--- a/publicstatic/UpdatePlayerSelect.html
+++ b/publicstatic/UpdatePlayerSelect.html
@@ -20,7 +20,7 @@
       </select>
     </label>
   </form>
-  <p><a href="ToBeDone.html">Advanced Search</a></p>
+  <p><a href="PlayerAdvancedSearch.html">Advanced Search</a></p>
   <p>&nbsp;</p>
   <form id="form2" name="form2" method="post" action="UpdatePlayerForm.html">
     <input name="Submit" type="submit" value="Submit" />
