--- a/publicstatic/AddPlayerForm.html
+++ b/publicstatic/AddPlayerForm.html
@@ -9,14 +9,23 @@
   <p>Add Player</p>
   <p>&nbsp;</p>
   <form id="form1" name="form1" method="post" action="">
-    <label>Player Name
+    <label>Player name
     <input type="text" name="textfield" />
     </label> 
     <label><br />
     <br />
+    Password
+    <input type="text" name="textfield3" />
+    <br />
+    <br />
     ID
     <input type="text" name="textfield2" />
     </label>
+    <p>
+      <label>
+      <input name="checkbox" type="checkbox" value="checkbox" checked="checked" />
+      Active</label>
+    </p>
     <p>&nbsp;</p>
     <p>
       <input name="Submit" type="submit" onclick="window.alert(&quot;Player has been added&quot;);" value="Submit" />
