--- a/publicstatic/BannerPage.html
+++ b/publicstatic/BannerPage.html
@@ -4,5 +4,6 @@
 &nbsp&nbsp<a href="ViewStatsSelect.html" target="main">View stats</a>
 &nbsp&nbsp<a href="ManageCourses.html" target="main">Manage courses</a>
 &nbsp&nbsp<a href="ManageViewableStatsSelect.html" target="main">Manage viewable stats</a>
+&nbsp&nbsp<a href="vCarousel" target="main">Mobile input</a>
 &nbsp&nbsp<a href="EnterStatsForm.html" target="main">Enter scores</a>
 &nbsp&nbsp<a href="LoginPage.html" onClick="window.alert(&quot;You have been logged out&quot;);" target="main">Logout</a></center></BODY></HTML>
