Fixed shit with stuff

--- a/publicstatic/!StartPage.html
+++ b/publicstatic/!StartPage.html
@@ -1,5 +1,6 @@
 <HTML><HEAD><TITLE>Pirate Golf</TITLE></HEAD>
+<div class="container-fluid">
 <FRAMESET rows="20%, 80%">
 <FRAME src="BannerPage.html" frameborder ="0" noresize>
 <FRAME src="LoginPage.html" frameborder ="0" noresize name="main">
-</FRAMESET>
+</FRAMESET></div>
