--- a/publicstatic/!StartPage.html
+++ b/publicstatic/!StartPage.html
@@ -1,6 +1,7 @@
-<HTML><HEAD><TITLE>Pirate Golf</TITLE></HEAD>
-<div class="container-fluid">
+<HTML><HEAD><TITLE>Pirate Golf</TITLE><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" type="text/css" href="bootstrap.css">
+<script src="bootstrap.js"></script>
+</HEAD>
 <FRAMESET rows="20%, 80%">
 <FRAME src="BannerPage.html" frameborder ="0" noresize>
 <FRAME src="LoginPage.html" frameborder ="0" noresize name="main">
-</FRAMESET></div>
+</FRAMESET>
