--- a/publicstatic/BannerPage.html
+++ b/publicstatic/BannerPage.html
@@ -1,9 +1,9 @@
-<HTML><BODY background="PirateGolfPics/NewPirateGolfBanner.jpg" link="#ffffff" vlink="#ffffff" alink="#ffffff"><center><BR><BR><BR><BR><BR>
-<a href="Landing.html" target="main"><img src="PirateGolfPics/PNG Files/HomeButton.png"></a>
-&nbsp&nbsp<a href="ManageUsers.html" target="main">Manage users</a>
-&nbsp&nbsp<a href="ViewStatsSelect.html" target="main">View stats</a>
-&nbsp&nbsp<a href="ManageCourses.html" target="main">Manage courses</a>
-&nbsp&nbsp<a href="ManageViewableStatsSelect.html" target="main">Manage viewable stats</a>
-&nbsp&nbsp<a href="vCarousel" target="main">Mobile input</a>
-&nbsp&nbsp<a href="EnterStatsForm.html" target="main">Enter scores</a>
-&nbsp&nbsp<a href="LoginPage.html" onClick="window.alert(&quot;You have been logged out&quot;);" target="main">Logout</a></center></BODY></HTML>
+<HTML><BODY background="PirateGolfPics/NewPirateGolfBanner.jpg" link="#ffffff" vlink="#ffffff" alink="#ffffff"><BR><BR><BR><BR><BR>
+<nav class="navbar navbar-default" role="navigation"><div class="container-fluid"><div class="collapse navbar-collapse"><ul class="nav navbar-nav"><li class="active"><a href="Landing.html" target="main"><img src="PirateGolfPics/PNG Files/HomeButton.png"></a></li>
+<li><a href="ManageUsers.html" target="main">Manage users</a></li>
+<li><a href="ViewStatsSelect.html" target="main">View stats</a></li>
+<li><a href="ManageCourses.html" target="main">Manage courses</a></li>
+<li><a href="ManageViewableStatsSelect.html" target="main">Manage viewable stats</a></li>
+<li><a href="vCarousel" target="main">Mobile input</a></li>
+<li><a href="EnterStatsForm.html" target="main">Enter scores</a></li>
+<li><a href="LoginPage.html" onClick="window.alert(&quot;You have been logged out&quot;);" target="main">Logout</a></li></ul></div></div></nav><script src="bootstrap.js"/></BODY></HTML>
