--- a/publicstatic/!StartPage.html
+++ b/publicstatic/!StartPage.html
@@ -1,6 +1,6 @@
 <HTML><HEAD><TITLE>Pirate Golf</TITLE></HEAD>
 <div class="container-fluid">
 <FRAMESET rows="20%, 80%">
-<FRAME src="BannerPage.html" frameborder ="0" noresize>
+<FRAME src="loadNav" frameborder ="0" noresize>
 <FRAME src="sessions/new" frameborder ="0" noresize name="main">
 </FRAMESET></div>
