Courses work now

--- a/publicstatic/UpdateCourseForm.html
+++ b/publicstatic/UpdateCourseForm.html
@@ -10,132 +10,199 @@
 <p align="center">&nbsp;</p>
 <form id="form1" name="form1" method="post" action="">
   <label>
-  <div align="center">Course Name
-    <input type="text" name="textfield" />
-  </div>
+  <div align="center">
+    <label>Course name
+    <input name="textfield" type="text" maxlength="255" />
+    </label>
+    <label><br />
+    </label>
+    <p>
+      <label>Number of holes
+        <input name="textfield3" type="text" size="3" />
+      </label>
+    </p>
+    <p>Green type
+      <input type="text" name="textfield5" />
+    </p>
+    <p>
+      <label></label>
+      <label>Description
+        <textarea maxlength="255" name="textarea"></textarea>
+      </label>
+    </p>
+    <p>
+      <label>Location
+        <input name="textfield2" type="text" maxlength="255" />
+      </label>
+    </p>
+    <p>&nbsp;</p>
+    <p>Hole info </p>
+    <p>Hole 1
+      <label>Par
+        <select name="select">
+          <option>3</option>
+          <option>4</option>
+          <option>5</option>
+        </select>
+        </label>
+        <label></label>
+      Hole 2
+  <label>Par
+  <select name="select2">
+    <option>3</option>
+    <option>4</option>
+    <option>5</option>
+  </select>
   </label>
-  <label>
-  <div align="center"><br />
-    <br />
-    Green Type
-    <input type="text" name="textfield2" />
-  </div>
+  <label></label>
+      Hole 3
+  <label>Par
+  <select name="select3">
+    <option>3</option>
+    <option>4</option>
+    <option>5</option>
+  </select>
   </label>
-  <p align="center">&nbsp;</p>
-  <p align="center">Par</p>
-  <p align="center">Hole 1
-    <select name="select">
-        <option>3</option>
-        <option>4</option>
-        <option>5</option>
-      </select>
-    Hole 2
-    <select name="select2">
-      <option>3</option>
-      <option>4</option>
-      <option>5</option>
-    </select>
-    Hole 3
-    <select name="select3">
-      <option>3</option>
-      <option>4</option>
-      <option>5</option>
-    </select>
-    Hole 4
-    <select name="select4">
-      <option>3</option>
-      <option>4</option>
-      <option>5</option>
-    </select>
-    Hole 5
-    <select name="select5">
-      <option>3</option>
-      <option>4</option>
-      <option>5</option>
-    </select>
-    Hole 6
-    <select name="select6">
-      <option>3</option>
-      <option>4</option>
-      <option>5</option>
-    </select>
-  </p>
-  <p align="center">Hole 7
-    <select name="select7">
-        <option>3</option>
-        <option>4</option>
-        <option>5</option>
-      </select>
-    Hole 8
-    <select name="select8">
-      <option>3</option>
-      <option>4</option>
-      <option>5</option>
-    </select>
-    Hole 9
-    <select name="select9">
-      <option>3</option>
-      <option>4</option>
-      <option>5</option>
-    </select>
-    Hole 10
-    <select name="select10">
-      <option>3</option>
-      <option>4</option>
-      <option>5</option>
-    </select>
-    Hole 11
-    <select name="select11">
-      <option>3</option>
-      <option>4</option>
-      <option>5</option>
-    </select>
-    Hole 12
-    <select name="select12">
-      <option>3</option>
-      <option>4</option>
-      <option>5</option>
-    </select>
-  </p>
-  <p align="center">Hole 13
-    <select name="select13">
-        <option>3</option>
-        <option>4</option>
-        <option>5</option>
-      </select>
-    Hole 14
-    <select name="select14">
-      <option>3</option>
-      <option>4</option>
-      <option>5</option>
-    </select>
-    Hole 15
-    <select name="select15">
-      <option>3</option>
-      <option>4</option>
-      <option>5</option>
-    </select>
-    Hole 16
-    <select name="select16">
-      <option>3</option>
-      <option>4</option>
-      <option>5</option>
-    </select>
-    Hole 17
-    <select name="select17">
-      <option>3</option>
-      <option>4</option>
-      <option>5</option>
-    </select>
-    Hole 18
-    <select name="select18">
-      <option>3</option>
-      <option>4</option>
-      <option>5</option>
-    </select>
-  </p>
-  <p align="center">&nbsp;</p>
-  <p align="center">&nbsp;</p>
+    </p>
+    <p>Hole 4
+      <label>Par
+        <select name="select4">
+          <option>3</option>
+          <option>4</option>
+          <option>5</option>
+        </select>
+        </label>
+      Hole 5
+  <label>Par
+  <select name="select5">
+    <option>3</option>
+    <option>4</option>
+    <option>5</option>
+  </select>
+  </label>
+  <label></label>
+      Hole 6
+  <label>Par
+  <select name="select6">
+    <option>3</option>
+    <option>4</option>
+    <option>5</option>
+  </select>
+  </label>
+  <label></label>
+    </p>
+    <p>Hole 7
+      <label>Par
+        <select name="select7">
+          <option>3</option>
+          <option>4</option>
+          <option>5</option>
+        </select>
+        </label>
+        <label></label>
+      Hole 8
+  <label>Par
+  <select name="select7">
+    <option>3</option>
+    <option>4</option>
+    <option>5</option>
+  </select>
+  </label>
+  <label></label>
+      Hole 9
+  <label>Par
+  <select name="select7">
+    <option>3</option>
+    <option>4</option>
+    <option>5</option>
+  </select>
+  </label>
+  <label></label>
+    </p>
+    <p>Hole 10
+      <label>Par
+        <select name="select7">
+          <option>3</option>
+          <option>4</option>
+          <option>5</option>
+        </select>
+        </label>
+        <label></label>
+      Hole 11
+  <label>Par
+  <select name="select7">
+    <option>3</option>
+    <option>4</option>
+    <option>5</option>
+  </select>
+  </label>
+  <label></label>
+      Hole 12
+  <label>Par
+  <select name="select7">
+    <option>3</option>
+    <option>4</option>
+    <option>5</option>
+  </select>
+  </label>
+  <label></label>
+    </p>
+    <p>Hole 13
+      <label>Par
+        <select name="select8">
+          <option>3</option>
+          <option>4</option>
+          <option>5</option>
+        </select>
+        </label>
+      Hole 14
+  <label>Par
+  <select name="select8">
+    <option>3</option>
+    <option>4</option>
+    <option>5</option>
+  </select>
+  </label>
+  <label></label>
+      Hole 15
+  <label>Par
+  <select name="select8">
+    <option>3</option>
+    <option>4</option>
+    <option>5</option>
+  </select>
+  </label>
+  <label></label>
+    </p>
+    <p>Hole 16
+      <label>Par
+        <select name="select8">
+          <option>3</option>
+          <option>4</option>
+          <option>5</option>
+        </select>
+        </label>
+        <label></label>
+      Hole 17
+  <label>Par
+  <select name="select8">
+    <option>3</option>
+    <option>4</option>
+    <option>5</option>
+  </select>
+  </label>
+  <label></label>
+      Hole 18
+  <label>Par
+  <select name="select8">
+    <option>3</option>
+    <option>4</option>
+    <option>5</option>
+  </select>
+  </label>
+  <label></label>
+    </p>
+  </div>
   <p align="center">
     <input name="Submit" type="submit" onclick="window.alert(&quot;Course has been added&quot;);" value="Submit" />
   </p>
