--- a/publicstatic/CoursesSideMenu.html
+++ b/publicstatic/CoursesSideMenu.html
@@ -1,5 +1,8 @@
 <HTML><Head><Title>Pirate Golf</Title></Head>
 <Body bgcolor=D7CAE6 link="#000000" vlink="#000000" alink="#000000"><center>
 <a href="AddCourseForm.html" target="SubMain">Add</a><BR>
-<a href="UpdateCourseSelect.html" target="SubMain">Update
-</center></Body></HTML>
+<!--<a href="UpdateCourseSelect.html" target="SubMain">Update</a><BR>
+-->
+</center>
+<iframe src="courselist" frameborder="0" width="100%" seamless>
+</Body></HTML>
