--- a/publicstatic/AddCourseForm.html
+++ b/publicstatic/AddCourseForm.html
@@ -32,7 +32,7 @@
     </p>
     <p>
       <label>Location
-      <input name="location" type="text" maxlength="255" />
+      <input type="text" maxlength="255" name="location" />
       </label>
     </p>
     <p>&nbsp;</p>
