--- a/publicstatic/LoginPage.html
+++ b/publicstatic/LoginPage.html
@@ -15,9 +15,9 @@
   <section class="container">
     <div class="login">
       <h1>Login to Pirate Golf</h1><BR>
-      <form method="post" action="Landing.html">
-        <p>Username: <input type="text" name="login" value="" placeholder="Username or email"></p>
-        <p>Password: <input type="password" name="password" value="" placeholder="Password"></p>
+      <form method="post" action="/sessions">
+        <p>Username: <input type="text" name="user[email]" value="" placeholder="Username or email"></p>
+        <p>Password: <input type="password" name="user[password]" value="" placeholder="Password"></p>
         <p class="remember_me">
           <label>
             <input type="checkbox" name="remember_me" id="remember_me">
